Fixing the margins on all the sections because margin was overlapping thats what

--- a/app/_components/Categories/Categories.css
+++ b/app/_components/Categories/Categories.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5em;
-  margin: 2rem auto;
+  margin: 4rem auto;
 }
 
 .men-section,
