--- a/app/_components/FeaturedSales/featuredSales.css
+++ b/app/_components/FeaturedSales/featuredSales.css
@@ -1,6 +1,6 @@
 .featured-sales {
   gap: 2rem;
-  margin-block: 2rem;
+  margin-block: 4rem;
 }
 
 .featured-sales--card {
